--- a/Contacto.html
+++ b/Contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Contacto</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" href="img/IPT.ico">
@@ -32,19 +33,88 @@
     
         </header>
     
-        <h1>Contactanos</h1>
-
-    <form action="mailto:inversionesparatodo@gmail.com">
-        <label for="fname">Nombre</label>
-        <input type="text" id="fname" name="fname">
-        <label for="lname">Apellido</label>
-        <input type="text" id="lname" name="lname">
-        <label for="lname">Dirección</label>
-        <input type="text" id="fname" name="fname">
-    </form>
-
+        <h1 align="center">Contactanos</h1>
+        <div class="d-flex justify-content-center">
+            <div class="card my-3 mx-1">
+                <div class="card-header" align="center">
+                  Facu
+                </div>
+                <div class="card-body">
+                  <blockquote class="blockquote mb-0">
+                    <p align="center">Ingeniero</p>
+                    <p align="center">Codo a Codo</p>
+                    <div class="textoGris">
+                        * Experto en Frontend
+                    </div>
+                  </blockquote>
+                </div>
+            </div> 
+            <div class="card my-3 mx-1">
+                <div class="card-header" align="center">
+                  Gaston
+                </div>
+                <div class="card-body">
+                  <blockquote class="blockquote mb-0">
+                    <p align="center">Ingeniero</p>
+                    <p align="center">Codo a Codo</p>
+                    <div class="textoGris">
+                        * Experto en Diseño Web
+                    </div>
+                  </blockquote>
+                </div>
+            </div> 
+            <div class="card my-3 mx-1">
+                <div class="card-header" align="center">
+                  Carlos
+                </div>
+                <div class="card-body">
+                  <blockquote class="blockquote mb-0">
+                    <p align="center">Ingeniero</p>
+                    <p align="center">Codo a Codo</p>
+                    <div class="textoGris">
+                        * Experto en Backend
+                    </div>
+                  </blockquote>
+                </div>
+            </div> 
+        </div>
+      <div class="container">
+        <div class="lead text-center my-3">Escribinos con tus consultas</div>
+        <form action="https://formspree.io/f/xbjbklpl" method="POST">
+          <div class="row">
+            <div class="col-md mb-3">
+              <label for="fname">Nombre</label>
+              <input type="text" id="fname" name="fname" placeholder="Ingrese Nombre" class="form-control" pattern=".{2,40}" title="Debe tener 2 o más caracteres" required>
+            </div>
+            <div class="col-md mb-3">
+              <label for="lname">Apellido</label>
+              <input type="text" id="lname" name="lname" placeholder="Ingrese Apellido" class="form-control" pattern=".{2,40}" title="Debe tener 2 o más caracteres" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md mb-3">
+              <label for="email">Email</label>
+              <input type="text" id="email" name="email" placeholder="Ingrese Email" class="form-control" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="No es un email valido" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md mb-3">
+              <label for="consulta">Consulta</label>
+              <textarea name="consulta" placeholder="Ingrese Consulta" class="form-control" required></textarea>
+            </div>
+          </div>
+          <div class="row" align="right">
+            <div class="col-md mb-3">
+              <input type="reset" value="Borrar" class="btn btn-success">
+            </div>
+            <div class="col-md mb-3">
+              <input type="submit" value="Enviar" class="btn btn-success">
+            </div>
+          </div>
+        </form>
+      </div>
     <footer>&copy; 2022 Inversiones para todos - Copyright All Right Reserved</footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
