modificado footer e instrumentos

--- a/Bonosyletras.html
+++ b/Bonosyletras.html
@@ -14,7 +14,22 @@
 <body>
 
     <header>
-        <h1>Bonos y Letras</h1>
+
+        <nav class="flex">
+
+            <div class="menu">
+                <div class="logo">
+                    <img src="img/IPT.png" alt="logo IPT">
+                </div>
+
+                <div class="links">
+                    <a href="Index.html">Inicio</a>
+                    <a href="Instrumentos.html">Instrumentos</a>
+                    <a href="Contacto.html">Contacto</a>
+                </div>
+            </div>
+        </nav>
+
     </header>
 
     <main>
@@ -75,7 +90,15 @@
 
     </main>
 
-    <footer>&copy; 2022 Inversiones para todos - Copyright All Right Reserved</footer>
+    <footer>
+        <div class="red-social">
+            <a target="_blank" href="https://facebook.com/">      <img src="./img/iconos/facebook.png" width="30" alt="logoFacebook"></a>
+            <a target="_blank" href="https://instagram.com/">     <img src="./img/iconos/instagram.png" width="30" alt="logoInstagram"></a>
+            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png" width="30" alt="logoGmail"></a>
+            <a target="_blank" href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia..."> <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a>                <a target="_blank" href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30" alt="logoTwitter"></a>
+        </div>
+        <p> &copy; 2022 Inversiones para todos - Copyright All Right Reserved </p>
+    </footer>
 
 </body>
 
