--- a/Criptomonedas.html
+++ b/Criptomonedas.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instrumentos</title>
+    <title>Criptomonedas</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" href="img/IPT.ico">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
     <header>
 
-        <nav class="flex-container">
+        <nav class="flex">
 
             <div class="menu">
                 <div class="logo">
@@ -29,16 +31,44 @@
         </nav>
 
     </header>
-    
+
     <main>
-        <div class="instrumentos">
-            <a href="Cauciones.html"> <img src="./img/instrumentos/Cauciones.jpg" width="400px" alt="cauciones"></a>
-            <a href="BonosyLetras.html"> <img src="./img/instrumentos/BonosyLetras.jpg" width="400px" alt="BonosyLetras"></a>
-            <a href="AccionesCedearsyADR.html"> <img src="./img/instrumentos/AccionesCedears.jpg" width="400px" alt="AccionesCedearsyADR"></a>
-            <a href="FondosComunesdeInversion.html"> <img src="./img/instrumentos/FCI.jpg" width="400px" alt="FondosComunesdeInversion"></a>
-            <a href="Obligacionesnegociables.html"> <img src="./img/instrumentos/ObligacionesNegociables.jpg" width="400px" alt="Obligacionesnegociables"></a>
-            <a href="Criptomonedas.html"> <img src="./img/instrumentos/Criptomonedas.jpg" width="400px" alt="Criptomonedas"></a>
-        </div>
+
+        <section>
+
+            <h2>Qué son las criptomonedas</h2>
+
+            <p>La criptomoneda, también llamada moneda virtual o criptodivisa, es dinero digital. Eso significa que no hay monedas ni billetes físicos — todo es en línea. Usted puede transferirle una criptomoneda a alguien en internet sin un intermediario, como un banco.</p>
+
+        </section>
+
+        <section>
+
+            <h2>Qué tipo de criptomonedas existen?</h2>
+
+            <p>Existen diferentes tipos de criptomonedas, algunas atadas al valor del dolar (stablecoins) y otras con valor propio llamadas altcoins. </p>
+
+            <p>Stablecoins:<br>Una stablecoin es una moneda digital vinculada con un activo de reserva “estable” como el dólar estadounidense o el oro. Este tipo de monedas están diseñadas para reducir la volatilidad propia de las criptomonedas sin respaldo como el Bitcoin.</p>
+
+            <p>Altcoins:<br>Una altcoin es una criptomoneda alternativa a las criptomonedas tradicionales y más populares, y hace referencia a que además de Bitcoin se admiten otras criptomonedas. El desarrollo de altcoins es relativamente sencillo debido a que bitcoin es de código abierto y muchas de las criptomonedas del mercado también lo son.</p>
+
+        </section>
+
+        <section>
+
+            <h2>Cuáles son sus ventajas</h2>
+
+            <ul>
+                <li>Trasferencia a bajo costo</li>
+                <li>Trazabilidad</li>
+                <li>Seguridad en las transacciones</li>
+                <li>Velocidad </li>
+                <li>Elimina intermediarios financieros(Ej Bancos) </li>
+                <li>Disponible en cualquier parte del mundo </li>
+            </ul>
+
+        </section>
+
     </main>
 
     <footer>
@@ -50,6 +80,7 @@
         </div>
         <p> &copy; 2022 Inversiones para todos - Copyright All Right Reserved </p>
     </footer>
-  
+
 </body>
+
 </html>
