--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,9 @@
 
         <h2>¿Qué es una inversión?</h2>
 
-        <img src="img/Inversiones.jpg" alt="Inversiones">
+        <div class="contenedor">
+            <img src="img/Inversiones.jpg" alt="Inversiones">
+        </div>
 
         <p>Una inversión es una actividad que consiste en dedicar recursos con el objetivo de obtener un beneficio a
             futuro de cualquier tipo.</p>
@@ -54,10 +56,17 @@
 
     <footer>
         <div class="red-social">
-            <a target="_blank" href="https://facebook.com/">      <img src="./img/iconos/facebook.png" width="30" alt="logoFacebook"></a>
-            <a target="_blank" href="https://instagram.com/">     <img src="./img/iconos/instagram.png" width="30" alt="logoInstagram"></a>
-            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png" width="30" alt="logoGmail"></a>
-            <a target="_blank" href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia..."> <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a>                <a target="_blank" href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30" alt="logoTwitter"></a>
+            <a target="_blank" href="https://facebook.com/"> <img src="./img/iconos/facebook.png" width="30"
+                    alt="logoFacebook"></a>
+            <a target="_blank" href="https://instagram.com/"> <img src="./img/iconos/instagram.png" width="30"
+                    alt="logoInstagram"></a>
+            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png"
+                    width="30" alt="logoGmail"></a>
+            <a target="_blank"
+                href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia...">
+                <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a> <a target="_blank"
+                href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30"
+                    alt="logoTwitter"></a>
         </div>
         <p> &copy; 2022 Inversiones para todos - Copyright All Right Reserved </p>
     </footer>
