--- a/Criptomonedas.html
+++ b/Criptomonedas.html
@@ -38,7 +38,9 @@
 
             <h2>Qué son las criptomonedas</h2>
 
-            <p>La criptomoneda, también llamada moneda virtual o criptodivisa, es dinero digital. Eso significa que no hay monedas ni billetes físicos — todo es en línea. Usted puede transferirle una criptomoneda a alguien en internet sin un intermediario, como un banco.</p>
+            <p>La criptomoneda, también llamada moneda virtual o criptodivisa, es dinero digital. Eso significa que no
+                hay monedas ni billetes físicos — todo es en línea. Usted puede transferirle una criptomoneda a alguien
+                en internet sin un intermediario, como un banco.</p>
 
         </section>
 
@@ -46,11 +48,17 @@
 
             <h2>Qué tipo de criptomonedas existen?</h2>
 
-            <p>Existen diferentes tipos de criptomonedas, algunas atadas al valor del dolar (stablecoins) y otras con valor propio llamadas altcoins. </p>
+            <p>Existen diferentes tipos de criptomonedas, algunas atadas al valor del dolar (stablecoins) y otras con
+                valor propio llamadas altcoins. </p>
 
-            <p>Stablecoins:<br>Una stablecoin es una moneda digital vinculada con un activo de reserva “estable” como el dólar estadounidense o el oro. Este tipo de monedas están diseñadas para reducir la volatilidad propia de las criptomonedas sin respaldo como el Bitcoin.</p>
+            <p>Stablecoins:<br>Una stablecoin es una moneda digital vinculada con un activo de reserva “estable” como el
+                dólar estadounidense o el oro. Este tipo de monedas están diseñadas para reducir la volatilidad propia
+                de las criptomonedas sin respaldo como el Bitcoin.</p>
 
-            <p>Altcoins:<br>Una altcoin es una criptomoneda alternativa a las criptomonedas tradicionales y más populares, y hace referencia a que además de Bitcoin se admiten otras criptomonedas. El desarrollo de altcoins es relativamente sencillo debido a que bitcoin es de código abierto y muchas de las criptomonedas del mercado también lo son.</p>
+            <p>Altcoins:<br>Una altcoin es una criptomoneda alternativa a las criptomonedas tradicionales y más
+                populares, y hace referencia a que además de Bitcoin se admiten otras criptomonedas. El desarrollo de
+                altcoins es relativamente sencillo debido a que bitcoin es de código abierto y muchas de las
+                criptomonedas del mercado también lo son.</p>
 
         </section>
 
@@ -69,14 +77,36 @@
 
         </section>
 
+        <section>
+
+            <h2>Las Criptos y los argentinos</h2>
+
+            <div class="contenedor2">
+                <div class="videoResponsive">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/eorki2k5YB8"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
     <footer>
         <div class="red-social">
-            <a target="_blank" href="https://facebook.com/">      <img src="./img/iconos/facebook.png" width="30" alt="logoFacebook"></a>
-            <a target="_blank" href="https://instagram.com/">     <img src="./img/iconos/instagram.png" width="30" alt="logoInstagram"></a>
-            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png" width="30" alt="logoGmail"></a>
-            <a target="_blank" href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia..."> <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a>                <a target="_blank" href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30" alt="logoTwitter"></a>
+            <a target="_blank" href="https://facebook.com/"> <img src="./img/iconos/facebook.png" width="30"
+                    alt="logoFacebook"></a>
+            <a target="_blank" href="https://instagram.com/"> <img src="./img/iconos/instagram.png" width="30"
+                    alt="logoInstagram"></a>
+            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png"
+                    width="30" alt="logoGmail"></a>
+            <a target="_blank"
+                href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia...">
+                <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a> <a target="_blank"
+                href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30"
+                    alt="logoTwitter"></a>
         </div>
         <p> &copy; 2022 Inversiones para todos - Copyright All Right Reserved </p>
     </footer>
