--- a/FondosComunesdeInversion.html
+++ b/FondosComunesdeInversion.html
@@ -46,6 +46,15 @@
                 como la Depositaria deberán cumplir con los requisitos que fije la reglamentación de la Comisión
                 Nacional de Valores (CNV).</p>
 
+            <div class="contenedor5">
+                <div class="videoResponsive4">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/T2w-6Txr5qA"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
         </section>
 
         <section>
@@ -115,10 +124,17 @@
 
     <footer>
         <div class="red-social">
-            <a target="_blank" href="https://facebook.com/">      <img src="./img/iconos/facebook.png" width="30" alt="logoFacebook"></a>
-            <a target="_blank" href="https://instagram.com/">     <img src="./img/iconos/instagram.png" width="30" alt="logoInstagram"></a>
-            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png" width="30" alt="logoGmail"></a>
-            <a target="_blank" href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia..."> <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a>                <a target="_blank" href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30" alt="logoTwitter"></a>
+            <a target="_blank" href="https://facebook.com/"> <img src="./img/iconos/facebook.png" width="30"
+                    alt="logoFacebook"></a>
+            <a target="_blank" href="https://instagram.com/"> <img src="./img/iconos/instagram.png" width="30"
+                    alt="logoInstagram"></a>
+            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png"
+                    width="30" alt="logoGmail"></a>
+            <a target="_blank"
+                href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia...">
+                <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a> <a target="_blank"
+                href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30"
+                    alt="logoTwitter"></a>
         </div>
         <p> &copy; 2022 Inversiones para todos - Copyright All Right Reserved </p>
     </footer>
