--- a/Obligacionesnegociables.html
+++ b/Obligacionesnegociables.html
@@ -84,14 +84,33 @@
 
         </section>
 
+        <section>
+            <h2>Profundizando información</h2>
+            <div class="contenedor6">
+                <div class="videoResponsive5">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-bdCBVr9wEw"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
         <div class="red-social">
-            <a target="_blank" href="https://facebook.com/">      <img src="./img/iconos/facebook.png" width="30" alt="logoFacebook"></a>
-            <a target="_blank" href="https://instagram.com/">     <img src="./img/iconos/instagram.png" width="30" alt="logoInstagram"></a>
-            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png" width="30" alt="logoGmail"></a>
-            <a target="_blank" href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia..."> <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a>                <a target="_blank" href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30" alt="logoTwitter"></a>
+            <a target="_blank" href="https://facebook.com/"> <img src="./img/iconos/facebook.png" width="30"
+                    alt="logoFacebook"></a>
+            <a target="_blank" href="https://instagram.com/"> <img src="./img/iconos/instagram.png" width="30"
+                    alt="logoInstagram"></a>
+            <a target="_blank" href="mailto:inversionesparatodos@gmail.com"> <img src="./img/iconos/gmail.png"
+                    width="30" alt="logoGmail"></a>
+            <a target="_blank"
+                href="https://wa.me/+5492235416866?text=Me%20gustaria%20recibir%20mas%20info%20sobre%20la%20academia...">
+                <img src="./img/iconos/whatsapp.png" width="30" alt="logoWhatsapp"></a> <a target="_blank"
+                href="https://twitter.com/?lang=es"> <img src="./img/iconos/gorjeo.png" width="30"
+                    alt="logoTwitter"></a>
         </div>
         <p> &copy; 2022 Inversiones para todos - Copyright All Right Reserved </p>
     </footer>
