acomodado los textos de instrumentos

--- a/AccionesCedearsyADR.html
+++ b/AccionesCedearsyADR.html
@@ -33,16 +33,17 @@
     </header>
 
     <main>
+        <h1 class="titulo-instrumento">Acciones</h1>
 
         <section>
 
-            <h2>Qué son las Acciones</h2>
+            <h2 class="subtitulos-instrumentos">¿Qué son las Acciones?</h2>
 
-            <p>Las acciones son títulos o valores que representan una parte proporcional del capital de una empresa. Al
+            <p class="parrafos-instrumentos">Las acciones son títulos o valores que representan una parte proporcional del capital de una empresa. Al
                 comprar una acción se está adquiriendo una porción de una compañia, lo que lo convierte en socios o
                 accionista de esta.</p>
 
-            <p>Es un instrumento financiero que cumple con dos finalidad, por el lado de la empresa, obtiene liquidez y
+            <p class="parrafos-instrumentos">Es un instrumento financiero que cumple con dos finalidad, por el lado de la empresa, obtiene liquidez y
                 financiación, ya sea para expandir el negocio o la cobertura de deudas, mientras que del lado del
                 inversor y nuevo socio, el mismo busca la posibilidad de hacer crecer su patrimonio.</p>
 
@@ -50,13 +51,11 @@
 
         <section>
 
-            <h2>Qué tipo de acciones existen</h2>
+            <h2 class="subtitulos-instrumentos">¿Qué tipo de acciones existen?</h2>
 
-            <h3>
-                <p>De acuerdo a los derechos y obligaciones que otorgan:</p>
-            </h3>
-
-            <ul>
+            <p class="parrafos-instrumentos">De acuerdo a los derechos y obligaciones que otorgan:</p>
+        
+            <ul class="ul-instrumentos">
                 <li>Acciones ordinarias: siendo las más comunes, otorgan derechos económicos y políticos, como por
                     ejemplo el derecho al voto en asamblea.</li>
                 <li>Acciones privilegiadas: son acciones ordinarias, pero tienen derecho a más de un voto en la
@@ -65,39 +64,20 @@
                     de menos derechos políticos, cómo carecer de derecho a voto.</li>
             </ul>
 
-            <h3>
-                <p>De acuerdo a su madurez:</p>
-            </h3>
+            <p class="parrafos-instrumentos">De acuerdo a su madurez:</p>
 
-            <ul>
-                <li>Acciones de valor o value stocks:</li>
-                <ul>
-                    <li>Son acciones que corresponden a compañías grandes y maduras, lo que las hace menos riesgosas y
-                        volátiles que las más jóvenes.</li>
-                    <li>Suelen distribuir dividendos periodicamente, pero no muy altos. Esto se debe a que su capacidad
-                        de crecimiento se encuentra en los límites (ej. Coca Cola)</li>
-                </ul>
-                <li>Acciones de crecimiento o growth socks:</li>
-                <ul>
-                    <li>Son acciones emitidas por compañías que muestran un crecimiento más rápido que el promedio de
-                        las empresas en un período de tiempo determinado.</li>
-                    <li>Estas compañias demuestran una rentabilidad positiva relativamente alta del capital invertido.
-                    </li>
-                    <li>Sus productos o servicios son novedosos y se encuentran en pleno período de crecimiento (ej.
-                        Tesla).
-                    </li>
-                    <li>A diferencia de las compañias maduras, este tipo de empresas no pagan dividendos debido a la
-                        necesidad de reinvertir los beneficios para un mayor y más rápido crecimiento.</li>
-                </ul>
+            <ul class="ul-instrumentos">
+                <li>Acciones de valor o value stocks: Son acciones que corresponden a compañías grandes y maduras, lo que las hace menos riesgosas y volátiles que las más jóvenes. Suelen distribuir dividendos periodicamente, pero no muy altos. Esto se debe a que su capacidad de crecimiento se encuentra en los límites (ej. Coca Cola)</li>
+                <li>Acciones de crecimiento o growth socks: Son acciones emitidas por compañías que muestran un crecimiento más rápido que el promedio de las empresas en un período de tiempo determinado. Estas compañias demuestran una rentabilidad positiva relativamente alta del capital invertido. Sus productos o servicios son novedosos y se encuentran en pleno período de crecimiento (ej. Tesla). A diferencia de las compañias maduras, este tipo de empresas no pagan dividendos debido a la necesidad de reinvertir los beneficios para un mayor y más rápido crecimiento.</li>
             </ul>
 
         </section>
 
         <section>
 
-            <h2>Ventajas de las acciones</h2>
+            <h2 class="subtitulos-instrumentos">Ventajas de las acciones</h2>
 
-            <ul>
+            <ul class="ul-instrumentos">
                 <li>Rentabilidad: históricamente, mantener acciones a largo plazo ha sido la inversión con mayor
                     rentabilidad.
                 </li>
@@ -112,39 +92,31 @@
 
         <section>
 
-            <h2>Formas de generar ganancias con acciones</h2>
+            <h2 class="subtitulos-instrumentos">Formas de generar ganancias con acciones</h2>
 
-            <p>Estas ganancias se pueden generar de dos formas: mediante ganancia de capital y/o vía de cobro de
-                dividendos.</p>
-
-            <p>La ganancia de capital hace referencia a la venta de una acción a un precio mayor al que se compró. A
-                través de esta operatoria el inversor se hace de una ganancia por la diferencia de precio.</p>
-
-            <p>Por otra parte, cuando una empresa obtiene beneficios, su asamblea puede decidir repartir una porción de
+            <p class="parrafos-instrumentos">Estas ganancias se pueden generar de dos formas: mediante ganancia de capital y/o vía de cobro de
+                dividendos. <br> La ganancia de capital hace referencia a la venta de una acción a un precio mayor al que se compró. A
+                través de esta operatoria el inversor se hace de una ganancia por la diferencia de precio. <br> Por otra parte, cuando una empresa obtiene beneficios, su asamblea puede decidir repartir una porción de
                 los mismos a sus accionistas o reinvertirlos. Si la decisión es distribuir esas ganancias entre los
-                socios, esta se da bajo la forma de dividendos.</p>
-
-            <p>Párrafo aparte, no se puede dejar de remarcar que las acciones son instrumentos de inversión de renta
+                socios, esta se da bajo la forma de dividendos. <br> Párrafo aparte, no se puede dejar de remarcar que las acciones son instrumentos de inversión de renta
                 variable, lo cual significa que los resultados futuros que se obtendrán dependen de la evolución de su
-                negocio, por lo que el rendimiento pasado no es garantía de resultados futuros.</p>
+                negocio, por lo que el rendimiento pasado no es garantía de resultados futuros.
+            </p>
 
         </section>
 
         <section>
 
-            <h2>Qué son los Cedears y ADR</h2>
+            <h2 class="subtitulos-instrumentos">Qué son los Cedears y ADR</h2>
 
-            <p>De acuerdo a su abreviatura, un Cedear es una Certificado de Depósito Argentino.</p>
-
-            <p>Representan una determinada cantidad de valores negociables que no tienen oferta pública ni cotización en
+            <p class="parrafos-instrumentos">De acuerdo a su abreviatura, un Cedear es una Certificado de Depósito Argentino. <br> Representan una determinada cantidad de valores negociables que no tienen oferta pública ni cotización en
                 el mercado argentino. A través de los mismos se tiene acceso a valores negociales que cotizan en
-                mercados internacionales (Netflix, Google, Meta, etc.) y a todos los derechos que estos otorgan.</p>
-
-            <p>Para que los Cedears puedan ser emitidos, los activos que representan deben quedar bajo la custodia de
+                mercados internacionales (Netflix, Google, Meta, etc.) y a todos los derechos que estos otorgan. <br> Para que los Cedears puedan ser emitidos, los activos que representan deben quedar bajo la custodia de
                 alguna de las entidades admitidas para tal fin.</p>
+            <p class="parrafos-instrumentos">En cuanto a los ADR, su abreviatura hace referencia a American Depositary Receipt. Se puede decir que son la contracara de los Cedears. <br> Un ADR representa un certificado por medio del cual los inversores del mercado estadounidense pueden negociar acciones de compañias cotizadas, las cuales como sociedades fueron constituidas en otros paises distinto a Estados Unidos. Algunos ADR argentinos que se pueden mencionar son: YPF, Galicia, Edenor, Loma Negra, etc. <br> El nacimiento de este instrumento se dió en la década de 1920 por el notorio interés de los inversores estadounidenses por formar parte en bolsas extranjeras.</p>
 
-            <p>Ventajas:</p>
-            <ul>
+            <h2 class="subtitulos-instrumentos">Ventajas:</h2>
+            <ul class="ul-instrumentos">
                 <li>Es una manera fácil de acceder a activos extranjeros en el mercado argentino.</li>
                 <li>Se pueden comprar en pesos y también cotizan en dólares, aunque no tienen mucho volumen dependiendo
                     de cual se esté operando.</li>
@@ -153,17 +125,6 @@
                     del CCL.
                 </li>
             </ul>
-
-            <p>En cuanto a los ADR, su abreviatura hace referencia a American Depositary Receipt. Se puede decir que son
-                la contracara de los Cedears.</p>
-
-            <p>Un ADR representa un certificado por medio del cual los inversores del mercado estadounidense pueden
-                negociar acciones de compañias cotizadas, las cuales como sociedades fueron constituidas en otros paises
-                distinto a Estados Unidos. Algunos ADR argentinos que se pueden mencionar son: YPF, Galicia, Edenor,
-                Loma Negra, etc.</p>
-
-            <p>El nacimiento de este instrumento se dió en la década de 1920 por el notorio interés de los inversores
-                estadounidenses por formar parte en bolsas extranjeras.</p>
 
         </section>
 
