--- a/Cauciones.html
+++ b/Cauciones.html
@@ -33,12 +33,13 @@
     </header>
 
     <main>
+        <h1 class="titulo-instrumento">Cauciones</h1>
 
         <section>
 
-            <h2>Qué son las cauciones</h2>
+            <h2 class="subtitulos-instrumentos">¿Qué son las cauciones?</h2>
 
-            <p>La caución bursátil es una operación financiera mediante la cual un inversor toma prestado o coloca
+            <p class="parrafos-instrumentos">La caución bursátil es una operación financiera mediante la cual un inversor toma prestado o coloca
                 fondos en el mercado, la misma es garantizada con valores negociables (bonos, letras, obligaciones
                 negociables, acciones, etc.). El hecho de estar garantizada la convierte en uno de los instrumentos más
                 seguros</p>
@@ -47,29 +48,30 @@
 
         <section>
 
-            <h2>Qué tipo de cauciones existen</h2>
+            <h2 class="subtitulos-instrumentos">¿Qué tipo de cauciones existen?</h2>
 
-            <p>Existen dos tipos de cauciones: colocadoras y tomadoras.</p>
+            <p class="parrafos-instrumentos">Existen dos tipos de cauciones: colocadoras y tomadoras.</p>
 
-            <p>Caución colocadora:<br>Aquí el inversor que posee dinero liquido lo presta al tomador y obtiene un
+            <ul class="ul-instrumentos">
+                <li>Caución colocadora: Aquí el inversor que posee dinero liquido lo presta al tomador y obtiene un
                 rendimiento. Este rendimiento se define por la tasa de interés que se negocia en ese momento en el
-                mercado.</p>
+                mercado.</li>
 
-            <p>Caución tomadora:<br>Aquí el el tomador pide dinero prestado y entrega en garantía valores
+                <li>Caución tomadora: Aquí el el tomador pide dinero prestado y entrega en garantía valores
                 negociables valuados por el mercado. Al vencimiento, el tomador devuelve el capital y paga los
-                intereses devengados al colocador.</p>
+                intereses devengados al colocador.</li>
 
         </section>
 
         <section>
 
-            <h2>Cuáles son sus ventajas</h2>
+            <h2 class="subtitulos-instrumentos">¿Cuáles son sus ventajas?</h2>
 
-            <ul>
-                <li>Previsibilidad, se conoce la ganancia al momento de concretarla</li>
-                <li>Rentabilidad, permite hacer rendir el dinero con bajo riesgo a corto plazo.</li>
-                <li>Seguridad, la operación está garantizada por el mercado</li>
-                <li>Flexibilidad, puede concretarse en plazos que van de 1 día a 120 días</li>
+            <ul class="ul-instrumentos">
+                <li>Previsibilidad: se conoce la ganancia al momento de concretarla</li>
+                <li>Rentabilidad: permite hacer rendir el dinero con bajo riesgo a corto plazo.</li>
+                <li>Seguridad: la operación está garantizada por el mercado</li>
+                <li>Flexibilidad: puede concretarse en plazos que van de 1 día a 120 días</li>
             </ul>
 
         </section>
