--- a/Obligacionesnegociables.html
+++ b/Obligacionesnegociables.html
@@ -34,15 +34,15 @@
 
     <main>
 
+        <h1 class="titulo-instrumento">Obligaciones Negociables (ONs)</h1>
+
         <section>
 
-            <h2>Qué son las Obligaciones Negociables (ONs)</h2>
+            <h2 class="subtitulos-instrumentos">¿Qué son las Obligaciones Negociables (ONs)?</h2>
 
-            <p>Conocidas como bonos corporativos, son también instrumentos de deuda, pero en este caso emitidos por
+            <p class="parrafos-instrumentos">Conocidas como bonos corporativos, son también instrumentos de deuda, pero en este caso emitidos por
                 empresas. Estas se comprometen a devolver del capital prestado más un pago de intereses. Estas
-                obligaciones se pueden negociar en pesos o dólares.</p>
-
-            <p>Cuando una entidad privada necesita fondos, este instrumento es una alternativa a la emisión de acciones.
+                obligaciones se pueden negociar en pesos o dólares. <br> Cuando una entidad privada necesita fondos, este instrumento es una alternativa a la emisión de acciones.
                 Una acción se diferencia de una obligación en que el comprador de la acción pasa a ser dueño de la
                 empresa mientras que, quien invierte en obligaciones compra parte de la deuda de la empresa. Entonces,
                 en vez de ser socio se convierte en acreedor.</p>
@@ -51,13 +51,11 @@
 
         <section>
 
-            <h2>Características de las ONs</h2>
+            <h2 class="subtitulos-instrumentos">Características de las ONs</h2>
 
-            <p>El capital de las obligaciones puede ser devuelto en su totalidad al vencimiento de la misma, o bien ser
+            <p class="parrafos-instrumentos">El capital de las obligaciones puede ser devuelto en su totalidad al vencimiento de la misma, o bien ser
                 pagadero parcialmente en cuotas anuales o semestrales llamadas amortizaciones. Por otra parte, el
-                interés generado puede ser de tasa fija o variable, y su pago se denomina renta.</p>
-
-            <p>Si bien el atractivo de este instrumento está en la ganancia del interés que paga el emisor, los
+                interés generado puede ser de tasa fija o variable, y su pago se denomina renta. <br> Si bien el atractivo de este instrumento está en la ganancia del interés que paga el emisor, los
                 inversores pueden vender las obligaciones negociables en el mercado y obtener la ganancia que puede
                 surgir de la diferencia entre el precio de compra y el de venta.</p>
 
@@ -65,18 +63,18 @@
 
         <section>
 
-            <h2>Ventajas de las ONs</h2>
+            <h2 class="subtitulos-instrumentos">Ventajas de las ONs</h2>
 
-            <ul>
-                <li>Certeza de cobro:<br>En su prospecto de emisión este instrumento tiene un cronograma de pagos
+            <ul class="ul-instrumentos">
+                <li>Certeza de cobro: En su prospecto de emisión este instrumento tiene un cronograma de pagos
                     prefijado, por lo cual se tiene conocimiento de antemano de la renta estipulada y la devolución del
                     capital en la forma y plazo acordados.</li>
-                <li>Inversión en empresas:<br>Es una forma sumar a la cartera importantes compañías del ámbito local de
+                <li>Inversión en empresas: Es una forma sumar a la cartera importantes compañías del ámbito local de
                     una manera diferente a las acciones.</li>
-                <li>Calificación de riesgo:<br>Las ONs pueden contar con una calificación de riesgo. La misma es una
+                <li>Calificación de riesgo: Las ONs pueden contar con una calificación de riesgo. La misma es una
                     nota asignada por una calificadora de riesgo externa a la empresa (ej. Fix Scr) que mide y califica
                     la capacidad del emisor de honrar los pagos de renta y amortización de la deuda.</li>
-                <li>Liquidez:<br>Si bien las obligaciones negociables se pueden mantener hasta su vencimiento, el
+                <li>Liquidez: Si bien las obligaciones negociables se pueden mantener hasta su vencimiento, el
                     inversor puede venderla en cualquier momento previo a esa fecha. Aunque puede suceder que dicha ON
                     no tenga liquidez en el mercado, es decir, no se negocie frecuentemente, no encontrado parte
                     compradora de forma inmediata.</li>
