--- a/Criptomonedas.html
+++ b/Criptomonedas.html
@@ -73,7 +73,7 @@
 
         <section>
 
-            <h2>Las Criptos y los argentinos</h2>
+            <h2 class="subtitulos-instrumentos">Las Criptos y los argentinos</h2>
 
             <div class="contenedor2">
                 <div class="videoResponsive">
