--- a/AccionesCedearsyADR.html
+++ b/AccionesCedearsyADR.html
@@ -130,7 +130,7 @@
 
         <section>
 
-            <h2>¿Cedears o Acciones?</h2>
+            <h2 class="subtitulos-instrumentos">¿Cedears o Acciones?</h2>
 
             <div class="contenedor4">
                 <div class="videoResponsive3">
