--- a/Cauciones.html
+++ b/Cauciones.html
@@ -78,7 +78,7 @@
 
         <section>
 
-            <h2>Cómo colocar una caución</h2>
+            <h2 class="subtitulos-instrumentos">¿Cómo colocar una caución?</h2>
 
             <div class="contenedor2">
                 <div class="videoResponsive">
