--- a/Instrumentos.html
+++ b/Instrumentos.html
@@ -31,7 +31,7 @@
     </header>
     
     <main>
-        <div class="instrumentos">
+        <div class="instrumentos-fotos">
             <a href="Cauciones.html"> <img src="./img/instrumentos/Cauciones.jpg" width="400px" alt="cauciones"></a>
             <a href="BonosyLetras.html"> <img src="./img/instrumentos/BonosyLetras.jpg" width="400px" alt="BonosyLetras"></a>
             <a href="AccionesCedearsyADR.html"> <img src="./img/instrumentos/AccionesCedears.jpg" width="400px" alt="AccionesCedearsyADR"></a>
