--- a/Obligacionesnegociables.html
+++ b/Obligacionesnegociables.html
@@ -83,7 +83,7 @@
         </section>
 
         <section>
-            <h2>Profundizando información</h2>
+            <h2 class="subtitulos-instrumentos">Profundizando información</h2>
             <div class="contenedor6">
                 <div class="videoResponsive5">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/-bdCBVr9wEw"
