--- a/Contacto.html
+++ b/Contacto.html
@@ -77,7 +77,7 @@
           <div class="mt-5" id="contenido"></div>
         </div>
       <div class="container">
-        <div class="lead text-center my-3">Escribinos con tus consultas</div>
+        <h1 align="center">Escribinos tus Consultas</h1>
         <form action="https://formspree.io/f/xbjbklpl" method="POST">
           <div class="row">
             <div class="col-md mb-3">
