--- a/Contacto.html
+++ b/Contacto.html
@@ -19,9 +19,9 @@
                     </div>
     
                     <div class="links">
-                        <a href="Index.html">Inicio</a>
-                        <a href="Instrumentos.html">Instrumentos</a>
-                        <a href="Contacto.html">Contacto</a>
+                        <a href="index.html">Inicio</a>
+                        <a href="instrumentos.html">Instrumentos</a>
+                        <a href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </nav>
