--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,8 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cb81139764.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+
     <header>
+
         <nav class="flex">
 
             <div class="menu">
@@ -22,19 +26,25 @@
                 </div>
 
                 <div class="links">
-                    <a href="Index.html">Inicio</a>
-                    <a href="Instrumentos.html">Instrumentos</a>
-                    <a href="Contacto.html">Contacto</a>
+                    <a href="index.html">Inicio</a>
+                    <a href="instrumentos.html">Instrumentos</a>
+                    <a href="contacto.html">Contacto</a>
                 </div>
             </div>
         </nav>
+
     </header>
+
     <main>
+
         <h1>Inversiones para todos</h1>
+
         <h2>¿Qué es una inversión?</h2>
+
         <div class="contenedor">
             <img src="img/Inversiones.jpg" alt="Inversiones">
         </div>
+
         <p>Una inversión es una actividad que consiste en dedicar recursos con el objetivo de obtener un beneficio a
             futuro de cualquier tipo.</p>
 
@@ -43,6 +53,7 @@
         <p>Están invitados a descubrir algunos de los instrumentos disponibles en el mercado de capitales.</p>
 
     </main>
+
     <footer>
         <div class="red-social">
             <a target="_blank" href="https://facebook.com/"> <img src="./img/iconos/facebook.png" width="30"
@@ -59,5 +70,7 @@
         </div>
         <p> &copy; 2022 Inversiones para todos - Copyright All Right Reserved </p>
     </footer>
+
 </body>
+
 </html>
