--- a/Instrumentos.html
+++ b/Instrumentos.html
@@ -22,8 +22,8 @@
 
                 <div class="links">
                     <a href="index.html">Inicio</a>
-                    <a href="instrumentos.html">Instrumentos</a>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="Instrumentos.html">Instrumentos</a>
+                    <a href="Contacto.html">Contacto</a>
                 </div>
             </div>
         </nav>
